# service-catalog-ai-migrator

./: .gitignore  README.md  TEST_REPORT.md  browser_researcher.py  config.example.yaml  honcho.db  pyproject.toml  requirements.txt  strategy.md  test_generators.py  v5_reset.py
.pipeline/: 01_research_output.md  04_test_output.md
marketing/: image_prompts.md  ip_protection_guide.md  linkedin_posts.md  product_description.md  product_one_pager.html
output/: .gitkeep  00_executive_summary.md  01_terms_of_reference.md  02_technical_specification.md  05_migration_roadmap.md  06_risk_register.md  07_training_plan.md
output/08_appendices/: risk_register.json  roadmap.json
products/: MANIFEST.md
products/SN_AI_Agent_Validator/: SOP.md
products/SN_CI_Auto_Tagger/: SOP.md
products/SN_CSA_Exam_Drift_Detector/: SOP.md
products/SN_CSDM_as_Code_Manager/: SOP.md
products/SN_Catalog_Usage_Analyzer/: SOP.md
products/SN_Clear_Skye_IGA_Adapter/: SOP.md
products/SN_Contract_Lifecycle_Tracker/: SOP.md
products/SN_Data_Fabric_Governance_Scanner/: SOP.md
products/SN_DevOps_Change_Automator/: SOP.md
products/SN_Flow_Designer_Documenter/: SOP.md
products/SN_Guardian/: SOP.md
products/SN_NowAssist_FreeForm_Triage/: SOP.md
products/SN_NowAssist_Panel_Fixer/: SOP.md
products/SN_Okta_Access_Governor/: SOP.md
products/SN_Platform_Analytics_Migrator/: SOP.md
products/SN_Power_BI_Exporter/: SOP.md
products/SN_SailPoint_JML_Bridge/: SOP.md
products/SN_Security_Migrator/: SOP.md
src/: __init__.py  cli.py  config.py  models.py
tests/: conftest.py
(+92 files in other folders)
